--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -8,6 +8,16 @@
     background: #f0f2f5;
 }
 
+.sankeyChartDiv {
+    width: 100%;
+    height: 550px;
+    margin: auto;
+    border: 1px solid black;
+    border-radius:10px;
+    z-index: 999;
+    background: #f0f2f5;
+}
+
 .icon-button {
     width: 100%;!important
     height: 100%!important;
