--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -24,6 +24,18 @@
     font-size: 1.3rem!important;
 }
 
+.my-decisions-content {
+    width: 100%;
+    height: 550px;
+    margin: auto;
+    border: 1px solid black;
+    border-radius:10px;
+    z-index: 999;
+    background: #f0f2f5;
+    color: black;
+    padding: 20px;
+}
+
 .project-name {
     color: white!important;
     font-size: 20pt;
