Adding decision pages - PART 17
Dividing options from evaluations - PART 7

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -8,6 +8,10 @@
     background: lightslategray;
 }
 
+.stakeholder-node-fixed-size {
+    width:400px!important;
+}
+
 .editable-input {
     width: 550px;
 }
