--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,98 @@
+.ol-ranking { /*https://codepen.io/michellebarker/pen/poLoeRq*/
+    list-style: none;
+    counter-reset: list;
+    padding: 0 1rem;
+}
+
+.li-ranking {
+    --stop: calc(100% / var(--length) * var(--i));
+    --l: 62%;
+    --l2: 88%;
+    --h: calc((var(--i) - 1) * (180 / var(--length)));
+    --c1: #1a2035;
+    --c2: #ececec;
+    /*--c1: hsl(var(--h), 71%, var(--l));*/
+    /*--c2: hsl(var(--h), 71%, var(--l2));*/
+
+    height: 100px;
+    position: relative;
+    counter-increment: list;
+    max-width: 45rem;
+    margin: 1rem auto;
+    padding: 2rem 1rem 1rem;
+    box-shadow: 0.1rem 0.1rem 1.5rem rgba(0, 0, 0, 0.3);
+    border-radius: 0.25rem;
+    overflow: hidden;
+    background-color: white;
+}
+
+.li-ranking::before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 1rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(to right, var(--c1) var(--stop), var(--c2) var(--stop));
+}
+
+.h3-ranking {
+    display: flex;
+    align-items: baseline;
+    margin: 0 0 1rem;
+    color: black!important;
+}
+
+.h3-ranking::before {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 0 0 auto;
+    margin-right: 1rem;
+    width: 3rem;
+    height: 3rem;
+    content: counter(list);
+    padding: 1rem;
+    border-radius: 50%;
+    background-color: var(--c1);
+    color: white;
+    font-weight: bolder;
+    font-size: 15pt;
+}
+
+.text-black {
+    color: black!important;
+}
+
+.width-100 {
+    width: 100%;
+}
+
+.row-results {
+    margin:20px;
+}
+
+.row-results-header {
+    background: #ececec;
+    color: black;
+}
+
+.container-results {
+    background: lightslategray;
+    border: 4px solid #ececec;
+    border-radius: 5px;
+}
+
+.div-results-1 {
+    width: 90%;
+    margin: auto;
+}
+
+.div-results-2 {
+    padding:10px;
+}
+
 .project-config-canvas {
     width: 100%;
     height: 550px;
