--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -5,7 +5,7 @@
 }
 
 .li-ranking:hover {
-    box-shadow: 0.1rem 0.1rem 1.5rem white;
+    box-shadow: 0.1rem 0.1rem 1.5rem #ececec;
 }
 
 .li-ranking {
