--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,8 @@
+.modal-decision {
+    width: 650px!important;
+    height: 300px!important;
+}
+
 .ol-ranking { /*https://codepen.io/michellebarker/pen/poLoeRq*/
     list-style: none;
     counter-reset: list;
@@ -205,6 +210,13 @@
 
 .select-node {
     width: 200px;
+    border: 1px solid;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+.select-decision {
+    width: 100%;
     border: 1px solid;
     border-radius: 10px;
     padding: 5px;
