--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -3,6 +3,13 @@
     height: 300px!important;
 }
 
+#chartdiv {
+    width: 100%;
+    height: 350px;
+    background: white;
+    border-radius: 10px;
+}
+
 .white-border {
     border: 1px solid slategrey!important;
 }
