--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -3,7 +3,14 @@
     height: 300px!important;
 }
 
-#chartdiv {
+.radar-chart-motivated-v1 {
+    width: 100%;
+    height: 350px;
+    background: #ececec;
+    border-radius: 10px;
+}
+
+.radar-chart-motivated-v2 {
     width: 100%;
     height: 350px;
     background: white;
