--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -3,6 +3,10 @@
     height: 300px!important;
 }
 
+.text-gray {
+    color: #778899!important;
+}
+
 .modal-chart {
     width: 750px!important;
     height: 600px!important;
