--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -63,8 +63,8 @@
 
 .bubble-chart-custom {
     width: 100%;
-    height: 250px;
-    background: lightslategrey;
+    height: 350px;
+    background: #ececec;
     margin-top: -1px;
     border-radius: 10px;
 }
