--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -44,6 +44,15 @@
     margin-top: -32px;
 }
 
+.pendencies {
+    width: 100%;
+    height: 350px;
+    padding: 10px;
+    background: white;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
 .radar-chart-motivated {
     width: 100%;
     height: 350px;
