--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -48,7 +48,7 @@
     width: 100%;
     height: 350px;
     padding: 10px;
-    background: white;
+    background: lightslategrey;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
