--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -269,6 +269,10 @@
     margin-top: 10px;
 }
 
+.margin-top-30-negative {
+    margin-top: -30px;
+}
+
 .icon-button {
     width: 100%;!important
     height: 100%!important;
