--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -40,6 +40,10 @@
     display: none;
 }
 
+.padding-bottom-20 {
+    padding-bottom: 20px!important;
+}
+
 .cart-margin-top {
     margin-top: -32px;
 }
