--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -303,6 +303,10 @@ tr.pendency-row:nth-child(even) {
     color: #ffb900!important;
 }
 
+.max-width-60 {
+    max-width: 60%!important;
+}
+
 .sankeyChartDiv {
     width: 100%;
     height: 550px;
