--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -3,6 +3,10 @@
     height: 300px!important;
 }
 
+.background-row-pendencies {
+    background-color: #1a2035;
+}
+
 .text-gray {
     color: #778899!important;
 }
